load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_7zip",
    strip_prefix = "rules_7zip-6b81f89c54ec7602f7073d0c8fd567c8ca6a79b9",
    urls = ["https://github.com/zaucy/rules_7zip/archive/6b81f89c54ec7602f7073d0c8fd567c8ca6a79b9.zip"],
    sha256 = "ec758b0c6abfb49722dc8d083dbf101a258e1630f779aae598a0ad3e22b5691b",
)

load("@rules_7zip//:setup.bzl", "setup_7zip")

setup_7zip()

local_repository(
    name = "com_github_zaucy_rules_vulkan",
    path = "../",
)

load("@com_github_zaucy_rules_vulkan//:repo.bzl", "vulkan_repos")

vulkan_repos()
